syntax = "proto3";

package catalogpb;

option go_package = "github.com/vincentandr/shopping-microservice/src/catalog/catalogpb";

service CatalogService{
    rpc Grpc_GetProducts(EmptyRequest) returns (GetProductsResponse) {}
    rpc Grpc_GetProductsByIds(GetProductsByIdsRequest) returns (GetProductsByIdsResponse) {}
    rpc Grpc_GetProductsByName(GetProductsByNameRequest) returns (GetProductsResponse) {}
}

message EmptyRequest {}

message GetProductsByIdsRequest {
    repeated string product_ids = 1;
}

message GetProductByIdsResponse {
    string product_id = 1;
    string name = 2;
    float price = 3;
}

message GetProductsByIdsResponse {
    repeated GetProductByIdsResponse products = 1;
}

message GetProductsByNameRequest {
    string name = 1;
}

message GetProductResponse {
    string product_id = 1;
    string name = 2;
    float price = 3;
    int32 qty = 4;
}

message GetProductsResponse{
    repeated GetProductResponse products = 1;
}